# mecanum_LTV_OCP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: blas_dispatch.h  box_qp_solver.h  cholesky.h  condensing.h  discretizer.h  heading_lookup.h  mecanum_ltv.h  mecanum_model.h  mpc_offline.h  mpc_online.h  mpc_types.h  neon_kernels.h  qp_solvers.h
scripts/: build_android_cortex_a53.sh  build_host_jni.sh
src/: blas_dispatch.cpp  box_qp_solver.cpp  cholesky.cpp  condensing.cpp  discretizer.cpp  heading_lookup_offline.cpp  heading_lookup_online.cpp  hpipm_ocp_solver.cpp  mecanum_ltv.cpp  mecanum_ltv_jni.cpp  mecanum_model.cpp  mpc_offline.cpp  mpc_online.cpp  mpc_precompute_main.cpp  mpc_solver_dispatch.cpp  neon_kernels.cpp
tests/: test_blasfeo_dgemm.cpp  test_box_qp.cpp  test_cholesky.cpp  test_condensing.cpp  test_discretizer.cpp  test_heading_lookup.cpp  test_heading_noise_comparison_rerun.cpp  test_load_windows.cpp  test_mpc_roundtrip.cpp  test_solver_comparison_rerun.cpp  test_timing.cpp  test_trajopt_rerun.cpp
